# melonbooks_scraper

./: .gitignore  Cargo.toml  README.md  melonbooks.db
server/www/: 404.html  index.php  melonbooks.css
src/: cli.rs  config.rs  job.rs  main.rs  model.rs  sock.rs
src/common/: error.rs
src/db/: mod.rs  sql.rs
src/notification/: mod.rs
src/web/: melonbooks_scraper.rs  mod.rs
