[package]
name = "melonbooks-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11" , features = ["blocking", "cookies"] }
select = "0.5.0"
clap = { version = "4.0.18", features = ["derive"] }
regex = "1.6.0"
tokio = { version = "1.21.2", features = ["macros", "net", "rt-multi-thread"] }
mysql = "22.2.0"
thiserror = "1.0.37"
chrono = "0.4.22"
lazy_static = "1.4.0"
crossterm = "0.25.0"
directories = "4.0.1"
serde = "1.0.147"
serde_derive = "1.0.147"
figment = { version = "0.10.8", features = ["yaml"] }
#webhook = "2.1.1"

[features]
default = []

sock = []
notification = []

[build-dependencies]
clap = "4.0.18"
clap_generate = "3.0.3"